# hwrs564b_course_material_kccodners

./: .gitignore  README.md  postbuild.sh  pyproject.toml
.devcontainer/: devcontainer.json
content_weekly/Week2_SteadyState_MF/: Codner_HW2.ipynb  Codner_HW2_20260211.ipynb  Codner_HW2_outdated.ipynb
content_weekly/Week3_WellsRecharge/: RechargeMe.ipynb  WellWell.ipynb
content_weekly/Week4_Layering/: Layered.ipynb
content_weekly/Week5_Transient/: Transient.ipynb
