[project]
name = "hwrs564b-course-materials"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "cartopy>=0.25.0",
    "flopy>=3.9.3",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "netcdf4>=1.7.2",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pooch>=1.8.2",
    "tqdm>=4.67.1",
    "wqchartpy>=0.1.10",
    "xarray>=2025.7.1",
]
